fix: enforce unique constraint on source_invoice_id to prevent duplicate inserts
- Add UNIQUE INDEX on source_invoice_id in V1 migration script
- Add @UniqueConstraint on ProcessedInvoiceEntity for H2 test enforcement
- Simplify ProcessedInvoiceRepositoryImpl.save() - remove REQUIRES_NEW
  TransactionTemplate; application-layer idempotency check combined with
  the DB constraint and Kafka retry is sufficient to handle the race
- Update duplicate-insert test to assert DataIntegrityViolationException
  is thrown (the constraint is the proof, not a catch-and-fallback)